--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -204,10 +204,22 @@ jobs:
               -DCMAKE_PREFIX_PATH="${{ steps.mount.outputs.mount_point }}"  \
               -DCMAKE_SYSTEM_NAME=iOS                                       \
               -DCMAKE_OSX_ARCHITECTURES="arm64"                             \
-              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                             \
+              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                            \
               -Werror=dev                                                   \
               -B build_ios
           cmake --build build_ios --config Release --verbose
+
+          cmake -S "${{ steps.src.outputs.path }}/cmake/test"                                          \
+              -DTEST_FULL=FALSE                                                                        \
+              -DTEST_STATIC=FALSE                                                                      \
+              -DTEST_TEST=FALSE                                                                        \
+              -DCMAKE_PREFIX_PATH="${{ steps.mount.outputs.mount_point }}/SDL3.xcframework/ios-arm64"  \
+              -DCMAKE_SYSTEM_NAME=iOS                                                                  \
+              -DCMAKE_OSX_ARCHITECTURES="arm64"                                                        \
+              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                                                       \
+              -Werror=dev                                                                              \
+              -B build_ios2
+          cmake --build build_ios2 --config Release --verbose
       - name: 'CMake (configure + build) tvOS'
         run: |
           cmake -S "${{ steps.src.outputs.path }}/cmake/test"               \
@@ -217,10 +229,22 @@ jobs:
               -DCMAKE_PREFIX_PATH="${{ steps.mount.outputs.mount_point }}"  \
               -DCMAKE_SYSTEM_NAME=tvOS                                      \
               -DCMAKE_OSX_ARCHITECTURES="arm64"                             \
-              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                             \
+              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                            \
               -Werror=dev                                                   \
               -B build_tvos
           cmake --build build_tvos --config Release --verbose
+
+          cmake -S "${{ steps.src.outputs.path }}/cmake/test"                                          \
+              -DTEST_FULL=FALSE                                                                        \
+              -DTEST_STATIC=FALSE                                                                      \
+              -DTEST_TEST=FALSE                                                                        \
+              -DCMAKE_PREFIX_PATH="${{ steps.mount.outputs.mount_point }}/SDL3.xcframework/tvos-arm64" \
+              -DCMAKE_SYSTEM_NAME=tvOS                                                                 \
+              -DCMAKE_OSX_ARCHITECTURES="arm64"                                                        \
+              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                                                       \
+              -Werror=dev                                                                              \
+              -B build_tvos2
+          cmake --build build_tvos2 --config Release --verbose
       - name: 'CMake (configure + build) iOS simulator'
         run: |
           sysroot=$(xcodebuild -version -sdk iphonesimulator Path)
@@ -237,6 +261,19 @@ jobs:
               -Werror=dev                                                   \
               -B build_ios_simulator
           cmake --build build_ios_simulator --config Release --verbose
+
+          cmake -S "${{ steps.src.outputs.path }}/cmake/test"                                                          \
+              -DTEST_FULL=FALSE                                                                                        \
+              -DTEST_STATIC=FALSE                                                                                      \
+              -DTEST_TEST=FALSE                                                                                        \
+              -DCMAKE_PREFIX_PATH="${{ steps.mount.outputs.mount_point }}/SDL3.xcframework/ios-arm64_x86_64-simulator" \
+              -DCMAKE_SYSTEM_NAME=iOS                                                                                  \
+              -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"                                                                 \
+              -DCMAKE_OSX_SYSROOT="${sysroot}"                                                                         \
+              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                                                                       \
+              -Werror=dev                                                                                              \
+              -B build_ios_simulator2
+          cmake --build build_ios_simulator2 --config Release --verbose
       - name: 'CMake (configure + build) tvOS simulator'
         run: |
           sysroot=$(xcodebuild -version -sdk appletvsimulator Path)
@@ -253,6 +290,19 @@ jobs:
               -Werror=dev                                                   \
               -B build_tvos_simulator
           cmake --build build_tvos_simulator --config Release --verbose
+
+          cmake -S "${{ steps.src.outputs.path }}/cmake/test"                                                           \
+              -DTEST_FULL=FALSE                                                                                         \
+              -DTEST_STATIC=FALSE                                                                                       \
+              -DTEST_TEST=FALSE                                                                                         \
+              -DCMAKE_PREFIX_PATH="${{ steps.mount.outputs.mount_point }}/SDL3.xcframework/tvos-arm64_x86_64-simulator" \
+              -DCMAKE_SYSTEM_NAME=tvOS                                                                                  \
+              -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64"                                                                  \
+              -DCMAKE_OSX_SYSROOT="${sysroot}"                                                                          \
+              -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0                                                                        \
+              -Werror=dev                                                                                               \
+              -B build_tvos_simulator2
+          cmake --build build_tvos_simulator2 --config Release --verbose
 
   msvc:
     needs: [src]
