cmake: Disable SDL_GPU on RISC OS.
The GCC SDK was having trouble with some of the driver code for XR support, and
as far as I know there is no GPU support here, so just disable this for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2891,6 +2891,7 @@ elseif(RISCOS)
       "${SDL3_SOURCE_DIR}/src/video/riscos/*.h"
     )
     set(HAVE_SDL_VIDEO TRUE)
+    set(SDL_GPU OFF)
   endif()
 
   set(SDL_FILESYSTEM_RISCOS 1)
